fix padding and font size on mobile

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -38,6 +38,11 @@
             border-radius: 41px;
             transition: 0.25s;
             transition-timing-function: ease-in-out;
+
+            @include mobile {
+                font-size: 1rem;
+                padding: 2% 5%;
+            }
             
             &:hover {
                 border: 1px $font-header;
